# Tempest

./: Cargo.toml  README.md  encryption.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: app_auth.rs  app_lobby.rs  game_client.rs  main.rs  uno_client.rs
client/: Cargo.toml
client/src/: lib.rs
encr/: Cargo.toml  README.md
encr/src/: client.rs  connection.rs  lib.rs  server.rs
rpc/: Cargo.toml
rpc/src/: Information.md  command.rs  comms.rs  game_state.rs  lib.rs  uno.rs  user_state.rs
server/: Cargo.toml
server/src/: connection_receiver.rs  main.rs  server_uno.rs
