[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

client = { version = "0.1.0", path = "../client" }
rpc = { version = "0.1.0", path = "../rpc" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tokio-util = { workspace = true, features = ["full"] }
futures.workspace = true
bincode = "2.0.1"
