[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

rpc = { version = "0.1.0", path = "../rpc" }
encr = { version = "0.1.0", path = "../encr" }
tokio = { workspace = true }
anyhow.workspace = true
bincode = { workspace = true }
