[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures = "0.3.31"
rpc = { version = "0.1.0", path = "../rpc" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
